<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="br.com.john.adoptionproject.Activity.CadastroUsuarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etxtCadNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etxtCadSobrenome"
                android:inputType="text"
                android:hint="@string/sobrenome"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etxtCadEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etxtCadSenha"
                android:inputType="textPassword"
                android:hint="@string/senha"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etxtCadConfirmaSenha"
                android:inputType="textPassword"
                android:hint="@string/confirmar_senha"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/rgSexo"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/txtSexo"
                    android:textSize="18sp"
                    android:text="Sexo: "
                    android:layout_marginLeft="8dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:id="@+id/rbMasculino"
                    android:text="Masculino"
                    android:checked="false"
                    android:layout_height="match_parent" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:id="@+id/rbFeminino"
                    android:text="Feminino"
                    android:checked="false"
                    android:layout_height="match_parent" />

            </RadioGroup>

            <ImageView
                android:id="@+id/fotoImageView"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_photo_camera_black_24dp"
                android:onClick="takePic"
                tools:ignore="VectorDrawableCompat" />

            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btnCadastrar"
                android:text="Cadastrar"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
